加入BaseModel基类、BaseServiceImpl基类、整理常量包、修改命名

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -2,6 +2,7 @@
 global
     daemon
     nbproc 1
+    #pidfile /var/run/haproxy.pid
     pidfile /Users/ken/MyPid/haproxy.pid
 
 ########默认配置############
